versioned_docs/version-5.4.0/tributech_agent/setup.mdx
---
title: Setup
sidebar_position: 4
---

import CodeBlock from '@theme/CodeBlock';
import SourceDockerCompose from '!!raw-loader!./examples/agent/docker-compose-agent-integration.yml';
import DockerComposeEnviromentExample from '!!raw-loader!./examples/agent-management/docker-compose-env-example.yml';
import DockerComposeVolumesExample from '!!raw-loader!./examples/agent-management/docker-compose-volumes-example.yml';
import EnvSample from '!!raw-loader!./examples/agent-management/agent-service-sample-values.yml';
import ThemedImage from '@theme/ThemedImage';
import AddEnrollmentLight from './img/node-agent-management-add-enrollment-light.png';
import AddEnrollmentDark from './img/node-agent-management-add-enrollment-dark.png';
import CertGenerationLight from './img/node-agent-management-certificate-generation-light.png';
import CertGenerationDark from './img/node-agent-management-certificate-generation-dark.png';
import BondEnrollmentLight from './img/agent-bond-enrollment-light.png';
import BondEnrollmentDark from './img/agent-bond-enrollment-dark.png';
import AgentActivationLight from './img/node-agent-management-agent-activation-light.png';
import AgentActivationDark from './img/node-agent-management-agent-activation-dark.png';
import BondActivatedLight from './img/agent-bond-activated-light.png';
import BondActivatedDark from './img/agent-bond-activated-dark.png';
import ArchitectureLight from '../tributech_node/img/data-middleware-architecture-light.svg';
import ArchitectureDark from '../tributech_node/img/data-middleware-architecture-dark.svg';
import ProcessOverviewLight from './img/setup-process-overview-light.png';
import ProcessOverviewDark from './img/setup-process-overview-dark.png';

In the following section we describe how to setup and activate a Tributech Agent with an existing [Tributech Node](../tributech_node/overview.md).
We assume that all [Requirements](requirements.mdx) are met and a running [Tributech Node](../tributech_node/overview.md) is accessible. The goal is to create a basic setup with a [Simulated Tributech Source](./sources/simulated_source.mdx) that will generate random data and send it to the [Tributech Agent](overview.md) via MQTT. The [Tributech Agent](overview.md) will create proofs for the received values which can later be inspected in the [Tributech Node](../tributech_node/overview.md).

<ThemedImage
  alt="Setup - General Process Overview"
  sources={{ light: ProcessOverviewLight, dark: ProcessOverviewDark }}
/>


:warning: [Requirements](requirements.mdx) must be satisfied

:warning: [Tributech Node](../tributech_node/overview.md) must be running and accessible

We will use [**Docker Engine**](https://docs.docker.com/engine/) and [**Docker Compose**](https://docs.docker.com/compose/) in our examples to show how to get an edge device up and running with all the required services. 

## General Process Overview
In this section we want to show how a Tributech Agent is setup up and can be used to securely transfer 
customer data from an edge device to the [Tributech Node](../tributech_node/overview.md) for inspection
and verification. The [Tributech Node](../tributech_node/overview.md) is the common management point for
all Tributech Agents connected to the Node. How a Tributech Agent operates and which Tributech Sources
will be able to submit data is defined in [Digital Twin Configuration](../tributech_node/agent/agent_configuration.mdx#configuring-an-agent)  of an Agent.
This management of Agent is required after completing successfully the Agent [Enrollment](#authentication-certificates-enrollment)
Process. 

<ThemedImage
  alt="Tributech Platform architecture overview"
  sources={{ light: ArchitectureLight, dark: ArchitectureDark }}
/>

The diagram above shows where a Tributech Agent fits into the overall platform. On the edge device the Agent receives its
data from [Tributech Sources](source_integration.md), which connect to the existing infrastructure via protocols such as
[OPC-UA](sources/opcua_source.mdx), [MQTT](sources/mqtt_source.mdx), [ADS](sources/ads_source.mdx) or
[REST](sources/rest_source.mdx) — the [Simulated Source](sources/simulated_source.mdx) used in this guide generates its
values itself. Embedded devices that cannot run a container can instead integrate the
[Tributech C-SDK](../tributech_c_sdk/overview.md) into their firmware and submit their data without a separate Source.

The communication between [Tributech Sources](source_integration.md) and the Tributech Agent will take place on the same
edge device via a local Message Broker connection. This channel is used on the one hand to send configurations and commands from Tributech Agent to the Tributech Source and on the other hand to send data streams from the Tributech Source to the Agent.

The Agent creates the proofs for the received values and transfers them together with the data to the
[Tributech Node](../tributech_node/overview.md) over an outgoing MQTTS connection. The same connection is used for the
[Enrollment](#authentication-certificates-enrollment) of the Agent and, in the opposite direction, for its
[Digital Twin Configuration](../tributech_node/agent/agent_configuration.mdx#configuring-an-agent) and for
[commands](source_integration.md#commands). Within the Node the data is notarized, processed and persisted, so that the
values, their proofs and the resulting twin graph remain available for
[verification](../tributech_node/agent/verification.mdx).

External applications never communicate with a Tributech Agent directly. They consume the data through the interfaces of
the [Tributech Node](../tributech_node/overview.md) — the [REST API](../tributech_node/api_category/API_integration.md),
[Webhooks](../tributech_node/Webhook_integration.md), a message broker or the
[MCP server](../tributech_node/MCP_integration.md) — for which access is
[authorized](../tributech_node/api_category/API_integration.md#authorization) following the OAuth 2.0 specification.

## Authentication Certificates (Enrollment)

Before starting a Tributech Agent we need to get a Certificate signed by the [Tributech Node](../tributech_node/overview.md)
that is used during the initial authentication process to indicate that a Tributech Agent is allowed to establish a MQTTS connection to the [Tributech Node](../tributech_node/overview.md). The certificate handling and initial establishing of a connection to the [Tributech Node](../tributech_node/overview.md) is called `Enrollment` and more information can be found in [agent management](../tributech_node/agent/agent_management.mdx). The overall enrollment flow — creating the certificate, providing it to the Agent and activating the connection — is summarized in the process overview diagram at the top of this page.

In order to create the certificate we visit the `Enrollment` section in the Tributech Node UI and select
`+ Add Enrollment`.

<ThemedImage
  alt="Tributech Add Enrollment"
  sources={{ light: AddEnrollmentLight, dark: AddEnrollmentDark }}
/>


This action leads to the following window, which contains all the information the user needs to create the certificate.

<ThemedImage
  alt="Tributech Certificate Generation UI"
  sources={{ light: CertGenerationLight, dark: CertGenerationDark }}
/>

Download the script for the operating system of your choice [Linux](https://github.com/tributech-solutions/tributech-enrollment/blob/main/Linux/generate-csr.sh)/[Windows](https://github.com/tributech-solutions/tributech-enrollment/blob/main/Windows/generate-csr.ps1) and execute the script in a empty folder named `enrollment`. Its important to note that the operating system does not
need to be identical to the Edge Device operating system. These Certificate Signing Request and certificates can be
created once and reused for multiple Tributech Agents. After successful execution of the script upload the `enrollment.csr` 
in the Tributech Node UI Upload Dialog and submit it by clicking `GENERATE CERTIFICATE`. A `enrollment.crt` file is returned
after the successful generation and should be saved in the same folder next to the script. If problems or questions 
occur during this process please consult the [README](https://github.com/tributech-solutions/tributech-enrollment/blob/main/README.md) for more details.

With the certificates present in a local folder, we call `enrollment`, we can now provide the certificates in two different ways to the Tributech Agent either via `environment variables` or via [docker volumes](https://docs.docker.com/storage/volumes/) which we will show later in detail during the Tributech Agent startup.



:warning: ***enrollment.key*** file in the referenced folder must contain the `enrollment key` in the format:
```
-----BEGIN PRIVATE KEY-----
MIIEvAIBADANBgkqhkiG9w0BAQEFAASCBKYwggSiAgEAAoIBAQDB910tiUPf3jp3
...
JoTeVZlyPgWSr6ckDiYrXZCINfeupxIpUNa2dOTssJ7frddsOc65TjYaEGtQFhN9
UuhRTNXXB3LPeUekmFqAFw==
-----END PRIVATE KEY-----
```

:warning: ***enrollment.crt*** file in the referenced folder must contain the `enrollment certificate` in the format:

```
-----BEGIN CERTIFICATE-----
MIIEhDCCAmygAwIBAgIVAMJHgTEKo6BAjM2x17MzqEoBAAAAMA0GCSqGSIb3DQEB
...
rTGtd7jookqEziPG7j9oN6Q4jQZI/fGeTDpz5JvEPriFWg4niwdZZVTVi4Axk0wT
Xb7SLA93BKc=
-----END CERTIFICATE-----
```


### Docker volumes
Docker Volumes are the preferred mechanism for persisting data generated by and used by Docker containers.
To make local certificates folders available to a docker container we need to add the mount to our `tributech-agent` service.
The folder for the certificates can be adjusted as needed (`./enrollment`) only the `:/app/enrollment` needs to
stay the same. 

<CodeBlock className="language-yml" title="docker-compose.yml section">{DockerComposeVolumesExample}</CodeBlock>

The mounted folders must be accessible to the unprivileged user the Agent runs as, see
[Container File Permissions](#container-file-permissions).


### Environment Variables
The second way to add enrollment certificates to a Tributech Agent is to use [environment variables](https://docs.docker.com/compose/environment-variables/set-environment-variables/). The content of the certificate files needs to be converted into a base64 encoded string without whitespaces, i.e. detailed information on how to convert a file into a base64 representation can be found here for [Windows](https://github.com/tributech-solutions/tributech-enrollment/tree/main/Windows) and [Unix](https://github.com/tributech-solutions/tributech-enrollment/tree/main/Linux). We then add the base64 encoded content of the `enrollment.crt` (Certificate) as `EnrollmentOptions__EnrollmentCertBase64` value and the `EnrollmentOptions__EnrollmentKeyBase64` contains base64 encoded `enrollment.key` content.

<CodeBlock className="language-yml" title="docker-compose.yml section">{DockerComposeEnviromentExample}</CodeBlock>

Even without a mounted `enrollment` folder the Agent still needs a writable data folder, see
[Container File Permissions](#container-file-permissions).

## Container File Permissions

Starting with version 5.4.0 the Tributech Agent and Tributech Source images are **hardened**: everything that is not
required to run the application has been stripped from the image, and the application no longer runs as `root` but as a
dedicated unprivileged user with the **user id `1654`**. This reduces the attack surface, because an attacker who gains
access to a container finds neither a shell nor any stray tooling to work with, and holds no root privileges.

This has one practical consequence for the setup. A Tributech Agent uses two local folders:

- **`./enrollment`** — created by you, holds the [enrollment certificates](#authentication-certificates-enrollment) the
  Agent reads on startup. Not needed when the certificates are supplied via [environment variables](#environment-variables).
- **`./volumes`** — created by Docker on the first start, holds the Agent's own persistent data: its keys, the generated
  certificates and the datatwin file. Always required.

Both are mounted into the container from the host, and for such mounts the **host** file ownership applies inside the
container. The folders must therefore be accessible to user id `1654`, otherwise the Agent cannot read its certificates
or write its keys. It cannot correct this itself, because the hardened image contains no tooling to change ownership.

:warning: ***This affects the enrollment certificates in particular:*** `enrollment.key` is created with owner-only
permissions, so an Agent running as user id `1654` cannot read it even though the file is present. Mounting the folder
read-only does **not** avoid the problem.

### Preparing the folders

Our `docker-compose.yml` examples solve this with an additional `init-permissions` service. It runs a small helper
container that adjusts the ownership of both folders and then exits, before the Agent is started:

```yml
  init-permissions:
    image: busybox:1.36
    user: "0:0"
    command: sh -c "chown -R 1654:1654 /mnt/enrollment /mnt/volumes"
    volumes:
      - ./enrollment:/mnt/enrollment
      - ./volumes:/mnt/volumes
```

The Tributech Agent then waits for it to finish successfully:

```yml
  tributech-agent:
    depends_on:
      init-permissions:
        condition: service_completed_successfully
```

The helper container needs no privileges on the host, because the Docker daemon already runs as `root`. The paths on the
right hand side (`/mnt/...`) are only used inside the helper container and can be named freely — what matters are the
host folders on the left. When the certificates are provided via [environment variables](#environment-variables), the
`./enrollment` folder does not exist and only `./volumes` needs to be prepared.

Alternatively the ownership can be adjusted once manually on the host, which requires root privileges:

```bash
sudo chown -R 1654:1654 enrollment volumes
```

:bulb: Both variants transfer the folders to user id `1654`, which means your own user can no longer modify them. To keep
access, e.g. to renew the enrollment certificates later, set your own group instead of `1654` as the group
(`id -g` prints it):

```bash
chown -R 1654:<your group id> enrollment volumes
```

## Starting a Tributech Agent
After we have prepared the Tributech Agent certificates for the enrollment we can now startup whole environment.
 In our example, we will provide the enrollment certificates through a local `enrollment` folder mounted as a [docker volume](#docker-volumes). If the base64 environment variable method is preferred
the `tributech-agent-simulated` `docker-compose.yml` file in the following examples must be adapted as described in the previous section.

:warning: In our examples for the setup documentation, we will use different container images and configurations compared to the [Quickstart](quickstart.mdx). Please use a new empty folder for the files to prevent any configuration mix.

We have a `docker-compose.yml` prepared for a quick and easy setup containing a MQTT Message Broker, a Tributech Agent and a [Tributech Simulated Source](sources/simulated_source.mdx). Note that the local MQTT Message Broker is required for the communication between the Tributech Agent and a [Tributech Simulated Source](sources/simulated_source.mdx) on the Edge Device
and will **not** be used for interactions with the [Tributech Node](../tributech_node/overview.md).

<CodeBlock className="language-yml" title="docker-compose.yml">{SourceDockerCompose}</CodeBlock>

Docker Compose provides a ready-made setup, but some settings must be adapted to the environment in which it is executed:

- `EdgeDeviceOptions__NodeUrl` is the absolute URL to the [Tributech Node](../tributech_node/overview.md) the agent should connect to

Sample values:

<CodeBlock className="language-plain" title="env specific settings">{EnvSample}</CodeBlock>

The Tributech Agent authenticates with the Tributech Node using enrollment certificates provided through a local `enrollment` folder mounted into the container (the `./enrollment:/app/enrollment` volume in the `docker-compose.yml` above). See [Authentication Certificates (Enrollment)](#authentication-certificates-enrollment) and [Docker volumes](#docker-volumes) above for how to create and provide it. If the base64 environment variable method is preferred instead, adapt the service as shown in the [Environment Variables](#environment-variables) section. If no Agent ID is configured, the agent generates a random one on first start.


We can now ***Startup*** the environment by running the following command:
<CodeBlock className="bash" title="terminal">
docker compose up -d
</CodeBlock>

***Validate*** that all containers are running. The output should return that every container is in the state `Up`
<CodeBlock className="bash" title="terminal">
    docker compose ps
</CodeBlock>

If you encounter problems with starting the containers please consult the official [docker documentation](https://docs.docker.com/compose/reference/) and revisit the [requirements](requirements.mdx).

If all container are up and running we can inspect the Tributech Agent and check if its in the expect state by checking the logs for a recurring message `Enrollment is not finished yet and needs to be confirmed by a user on the Node`.

<CodeBlock className="bash" title="terminal">
docker compose logs -f tributech-agent-simulated
</CodeBlock>

This message means that we now have a running Tributech Agent which requires permission from the [Tributech Node](../tributech_node/overview.md) to establish a connection. Our current setup is started with the default values for the Tributech Agent and Tributech Source and requires to be configured in the [Tributech Node](../tributech_node/overview.md) in order to send sample data.

## Activate Agent

After the docker containers have been started successfully the Agent will connect to the specified environment automatically. The user has to check if the Agent is present in the `enrollment section`. To access the enrollment the user just has to click on `Enrollment` in the left management panel of the Tributech UI. 

<ThemedImage
  alt="Activate Tributech Agent"
  sources={{ light: BondEnrollmentLight, dark: BondEnrollmentDark }}
/>

 The newly started Agent should be one of the top most entries of the list and should be in the `Pending` state. You can also identify it by the `Creation Date` column, which reflects when the enrollment started — sorting the list by `Creation Date` brings the most recently enrolled agent to the top. By clicking on the ***Activate*** button we grant our agent the permission to connect and be managed by this [Tributech Node](../tributech_node/overview.md). For more information on agent management in the [Tributech Node](../tributech_node/overview.md) visit [agent management](../tributech_node/agent/agent_management.mdx).

<ThemedImage
  alt="Activate Tributech Agent"
  sources={{ light: AgentActivationLight, dark: AgentActivationDark }}
/>

After the successfully activating the agent state will switch from `Pending` to `Online` which indicates that the Tributech Agent is now ready to be configured. In the current state the Tributech Agent has a connection to the [Tributech Node](../tributech_node/overview.md) established but does not have any configuration. This means it does not know of any [Tributech Sources](source_integration.md) on the same Edge Device.

<ThemedImage
  alt="Online Tributech Agent"
  sources={{ light: BondActivatedLight, dark: BondActivatedDark }}
/>

To complete the configuration of a Tributech Agent visit the [configuration section](../tributech_node/agent/agent_configuration.mdx#configuring-an-agent).
